--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -24,7 +24,7 @@
 
             <div class = "flex-container">
                 <div class = "one">
-                    <h2>Only one company in food industry appears in WSJ's rating of top 30 'sustainably managed companies'</h2>
+                    <h2>Food industry only has one company showing up in top 30 'sustainably managed companies' rated by WSJ</h2>
                     <p>
                         This project zooms into food industry to examine whether the bigger firms perform better in ESG performance. 
                         Before diving into analysis, the first question is: Why food industry? 
@@ -90,9 +90,9 @@
                     <br>
                     <br>
                     There are several key findings from the analysis: 
-                    (i) For a serving size around 112.0, JBS has higher total lipid (fat) than industry average. 
+                    (i) For a serving size of 112.0, JBS has higher median value of total lipid (fat) than industry average. 
                     (ii) JBS has higher maximum value of total lipid fat than 
-                    industry average for a serving size of 112.0. (iii) The mean value of total lipid fat does not decrease 
+                    industry average for a serving size of 112.0. (iii) The median value of total lipid fat does not decrease 
                     proportionally with the decrease of serving size, which might raise further concerns about food nutrient and 
                     safety.
 
