updated html for why to include lipids

--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -85,6 +85,7 @@
                     than industry average
                 </h2>
                 <p>
+                    High levels of lipids (fats) can significantly increase a person's risk of heart attacks, strokes, etc. 
                     A side by side comparison between JBS and industry average (here 'industry' refers to 
                     all the branded companies with records on USDA website) shows that JBS has higher 'total lipid (fat)' value.
                     <br>
@@ -222,7 +223,7 @@
             <br>
             <br>
             (iii) Jupyter notebook for data cleaning and all cleaned data are available at 
-            <a href="https://github.com/maggiechen615/CAPP30239_FA22/tree/main/charts_final_project">Maggie's GitHub Repo</a>
+            <a href="https://github.com/maggiechen615/CAPP30239_FA22/tree/main/charts_final_project">GitHub</a>
         </p>
 
         <h2>Code Reference</h2>
