highlighted keywords in html

--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -18,8 +18,8 @@
                 ESG stands for Environmental, Social and Governance. For a long time investors have paid attention only to 
                 financial factors of a company, i.e. revenue, net income, and CAGR. However, over the past few years non-financial 
                 factors have caught increasing attention to better identify risk and opportunities of a target company. 
-                Why are ESG factors important? Can we simply assume that those big companies (big in size and big in revenue) are 
-                performing well in non-financial factors? 
+                Why are ESG factors important? Can we simply assume that those <strong>big</strong> companies (big in size and big in revenue) are 
+                performing <strong>better</strong> in non-financial factors? 
             </p>
 
             <div class = "flex-container">
